[gd_scene load_steps=19 format=2]

[ext_resource path="res://Goals.gd" type="Script" id=1]
[ext_resource path="res://Server.tscn" type="PackedScene" id=2]
[ext_resource path="res://Spawner.gd" type="Script" id=3]
[ext_resource path="res://Zoga.gd" type="Script" id=4]
[ext_resource path="res://PlayerRigid.tscn" type="PackedScene" id=5]
[ext_resource path="res://SigmarOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=7]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 2

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/BG.png-e225559154c59757eb35b3d4d14f35e9.stex"

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 231.75, 213.75 )

[sub_resource type="DynamicFont" id=11]
size = 56
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=6]
radius = 63.7887

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( -16, 50, -28, 43, -49, 17, -55, -8, -47, -42, -23, -64, 12, -73, 47, -64, 67, -41, 75, -13, 66, 25, 45, 45, 16, 53, -4, 55 )

[sub_resource type="CircleShape2D" id=13]
radius = 20.0

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 0.886275, 0.776471, 0.0509804, 1, 0.839216, 0.258824, 0.00392157, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.05
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 13.0
scale_random = 1.0
color_ramp = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
color_ramp = SubResource( 15 )

[node name="World" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 960, 540 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 4 )
margin_left = -979.0
margin_top = -390.0
margin_right = 2941.0
margin_bottom = 1570.0
texture = SubResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Server" parent="." instance=ExtResource( 2 )]

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 78, 75 )
script = ExtResource( 3 )
player = ExtResource( 5 )

[node name="Arena" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( -40, 2 )
polygon = PoolVector2Array( 0, 0, 2000, 0, 2000, -100, 0, -100 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( -40, 1179 )
polygon = PoolVector2Array( 0, 0, 2000, 0, 2000, -100, 0, -100 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 61.625, 2.06251 )
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 19, 328 )
rotation = 0.677927
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( -259, 491 )
rotation = -0.932244
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 2179, 573 )
rotation = 0.677927
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 1920, 242 )
rotation = -0.790167
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 32.2438, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 61.625, 701.062 )
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 1956.62, -0.937492 )
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Arena"]
position = Vector2( 1956.62, 698.062 )
scale = Vector2( 0.50625, 1.88437 )
polygon = PoolVector2Array( 0, 0, 0, 200, -200, 200, -200, 0 )

[node name="Goals" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Area2D2" type="Area2D" parent="Goals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/Area2D2"]
position = Vector2( -228, 553 )
shape = SubResource( 10 )

[node name="Area2D3" type="Area2D" parent="Goals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/Area2D3"]
position = Vector2( 2151, 514 )
shape = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="Goals"]
anchor_right = 1.0
margin_right = -18.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Goals/MarginContainer"]
margin_right = 1902.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Goals/MarginContainer/HBoxContainer"]
margin_right = 949.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Goals/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 472.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.494118, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 11 )
text = "Team One: "

[node name="Score1" type="Label" parent="Goals/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 476.0
margin_right = 949.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 11 )
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Goals/MarginContainer/HBoxContainer"]
margin_left = 953.0
margin_right = 1902.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Goals/MarginContainer/HBoxContainer/HBoxContainer2"]
margin_right = 472.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.494118, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 11 )
text = "Team Two: "

[node name="Score2" type="Label" parent="Goals/MarginContainer/HBoxContainer/HBoxContainer2"]
margin_left = 476.0
margin_right = 949.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 11 )
text = "0"

[node name="BallSpawn" type="Node2D" parent="Goals"]
position = Vector2( 1030.8, 539.359 )

[node name="Zoga" type="RigidBody2D" parent="Goals"]
position = Vector2( 940.803, 530.359 )
mass = 0.102041
gravity_scale = 0.0
linear_damp = 0.001
angular_damp = 3.0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/Zoga"]
position = Vector2( 10, -9 )
shape = SubResource( 6 )

[node name="LightOccluder2D10" type="LightOccluder2D" parent="Goals/Zoga"]
occluder = SubResource( 7 )

[node name="Fireball" type="RigidBody2D" parent="."]
position = Vector2( 693, 434 )
gravity_scale = 0.0
linear_velocity = Vector2( 600, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fireball"]
shape = SubResource( 13 )

[node name="Particles2D2" type="Particles2D" parent="Fireball"]
amount = 150
lifetime = 5.0
preprocess = 258.72
process_material = SubResource( 16 )

[node name="Particles2D" type="Particles2D" parent="Fireball"]
amount = 1000
lifetime = 0.5
local_coords = false
process_material = SubResource( 17 )

[node name="Wall4" parent="." instance=ExtResource( 7 )]
position = Vector2( 1513, 804 )

[node name="Wall5" parent="." instance=ExtResource( 7 )]
position = Vector2( 1503, 228 )

[node name="Wall6" parent="." instance=ExtResource( 7 )]
position = Vector2( 333, 199 )

[node name="Wall7" parent="." instance=ExtResource( 7 )]
position = Vector2( 390, 884 )
rotation = -0.093235
scale = Vector2( -0.860662, -0.860662 )

[connection signal="playerConnected" from="Server" to="Spawner" method="_on_Server_playerConnected"]
[connection signal="playerMoved" from="Server" to="Spawner" method="_on_Server_playerMoved"]
[connection signal="body_entered" from="Goals/Area2D2" to="Goals/Zoga" method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Goals/Area2D3" to="Goals/Zoga" method="_on_Area2D3_body_entered"]
[connection signal="left_goal" from="Goals/Zoga" to="Goals" method="_on_Zoga_left_goal"]
[connection signal="right_goal" from="Goals/Zoga" to="Goals" method="_on_Zoga_right_goal"]
